fix. agregando propiedad visibilidad en estado abierto y cerrado

--- a/src/componentes/menu-lateral.scss
+++ b/src/componentes/menu-lateral.scss
@@ -26,6 +26,7 @@
       margin-left: -40px;
       opacity: 0;
       pointer-events: none;
+      visibility: hidden;
       transition: all 0.3s ease-in-out;
     }
     
@@ -34,6 +35,7 @@
         border-radius: map-get($borde-redondeado, '20') 0 0 map-get($borde-redondeado, '20');
       }
       .menu-lateral-contenedor {
+        visibility: visible;
         margin-left: 0;
         opacity: 1;
         pointer-events: inherit;
